Bug 537900 - attachment code for apple encode isn't 64-bit compatible; r=Standard8 a=Standard8 for checkin to CLOSED TREE